Changes for 1.8.1

 - [ZBX-1729] removed limitation of showings triggers in charts only by one item (Aly)
 - [ZBX-1729] removed excessive space in chart header,  informational messages (triggers, percentile) are separated (Aly)
 - [ZBX-1577] fixed pie chart display (Aly)
 - [ZBX-1613] added sorting for user groups members (Vedmak)
 - [ZBX-1734] changed severity coloring in events screen (Aly)
 - [ZBX-1573] fixed colon precedence in user right entries (Aly)
 - [ZBX-1708] fixed errors in log items history screen (Aly)
 - [ZBX-1715] fixed errors in IT Services parent selection sceren (Aly)
 - [ZBX-1652] fixed user media deletion on profile save (Aly)
 - [ZBX-1641] fixed handling of "Include" statement in configuration files (Sasha)
 - [ZBX-1580] reduced frontend memory usage (Vedmak)
 - [ZBX-1663] fixed y axis calculation in stacked graphs (Aly)
 - [ZBX-1468] fixed editing user media types on node with id > 99 (Vedmak)
 - [ZBX-1727] add missing S_INCORRECT_EXPRESSION localisation string (Richlv)
 - [ZBX-1659] fixed checked marks on multilabel selection on map (Aly)
 - [ZBXNEXT-192] added possibility to exclude some services from the result of services[] (Sasha)
 - [ZBX-1478] improved php requirements checks (Vedmak)
 - [ZBX-1713] fixed adding user group to email alerts (Vedmak)
 - [ZBX-1643] removed edit links from search if no write access to object (Aly)
 - [ZBX-1661] fixed value mappings retrieval (Aly)
 - [ZBX-1665] fixed hosts view in graphs configuration screen (Aly)
 - [ZBX-1673] fixed removing hosts from hosts group, when user with permission only on host group updates it (Vedmak)
 - [ZBX-1639] fixed processing of logrt[] check (Sasha)
 - [ZBX-1671] make more strings translatable. Thanks to alixen (Richlv)
 - [ZBX-1669] make more strings translatable. Patch by dotneft (Richlv)
 - [ZBX-1627] fixed errors in monitoring->overview (Vedmak)
 - [ZBX-1603] fixed button title when editing maintenance period (Vedmak)